...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WM4-Pc-6BG">
                                <frame key="frameInset" minY="41" width="44" height="30" maxX="16"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                <size key="titleShadowOffset" width="1" height="1"/>
                                <state key="normal" title="logout">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" red="0.73979466620000001" green="0.73979466620000001" blue="0.73979466620000001" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="logout:" destination="hPN-pt-gKm" eventType="touchUpInside" id="j2I-fp-sVO"/>
                                </connections>
...
